# YAAF

./: README.md  pyproject.toml
docs/: README.md
examples/: basic_assistant.py  conversational_assistant.py
src/assistants/: assistants.py
test_scripts/crewai/: template.py
test_scripts/prompts/: template_agent.yaml
test_scripts/structured_output/: template_agent.py
test_scripts/yaaf/: template.py
